fix contact us responsiveness on iphone5 and surface duo

--- a/websms/src/Components/ContactusComp/ContactusComp.css
+++ b/websms/src/Components/ContactusComp/ContactusComp.css
@@ -5,7 +5,6 @@
 
 .side-contact {
     display: grid;
-    /* grid-template-rows: repeat(6, 50px); */
 }
 
 .side-contact h1{
@@ -32,7 +31,31 @@
     /* border-style: outset; */
 }
 
-@media screen and (max-width: 460px) {
+@media screen and (max-width: 320px) and (max-height: 568px) {
+    .side-contact  h1 {
+        font-size: 48px;
+    }
+    
+    .side-contact  h2 {
+        font-size: 14px;
+    }
+
+    .line-contact { 
+        padding-left: 135px;
+        margin-top: 25px;
+    }
+
+    .icon {
+        height: auto;
+        width: 35px;
+    }
+
+    .contact-us {
+        grid-template-columns: 1fr;
+    }
+}
+
+@media screen and (max-width: 460px) and (min-width: 321px) {
     .contact-us {
         margin-bottom: 10px;
         display: block;
@@ -58,8 +81,37 @@
     }
   }
 
+@media screen and (max-width: 540px) and (max-height: 720px) {
+    .side-contact h1 {
+        font-size: 48px;
+    }
 
-@media screen and (max-width:850px) and (min-width: 461px){
+    .side-contact-2 h2{
+        font-size: 14px;
+        padding-top: 0px;
+    }
+
+    .icon {
+        height: auto;
+        width: 40px
+    }
+
+    .contact-us {
+        grid-template-columns: 1fr;
+    }
+
+    .line-contact { 
+        padding-left: 165px;
+        margin-top: 25px;
+    }
+
+    .side-contact {
+        margin-bottom: 5%;
+    }
+}
+
+
+@media screen and (max-width:850px) and (min-width: 541px){
     .contact-us {
         margin-bottom: 50px;
         display: block;
