--- a/websms/src/pages/styles-home.css
+++ b/websms/src/pages/styles-home.css
@@ -12,18 +12,15 @@
     height: 40vh;
     width: 40vw;
   }
-  /* @media screen and (max-width: 770px) {
-    #fullpage-wrapper {
-      margin-top: -10%;
-    }
-  } */
 
-  @media screen and (max-width: 460px) {
-    .leaflet-container {
-      height: 250px;
-      width: 250px;
+  @media screen and (max-width: 320px) and (max-height: 568px){
+    .leaflet-container{
+      width: 90%;
+      height: 180px;
     }
+  }
 
+  @media screen and (max-width: 460px){
     .section6 {
       flex-direction: column;
       flex-wrap: wrap;
@@ -36,20 +33,36 @@
     }
   }
 
-  @media screen and (max-width:769px) and (min-width: 461px) {
+  @media screen and (max-width: 460px) and (min-width: 321px) {
+    .leaflet-container {
+      height: 250px;
+      width: 250px;
+    }
+  }
+
+  @media screen and (max-width: 540px) and (max-height: 720px) {
+    .leaflet-container {
+      height: 280px;
+      width: 280px;
+    }
+  }
+
+  @media screen and (max-width: 769px) {
     .section6 {
       flex-direction: column;
       flex-wrap: wrap;
       align-items: center;
     }
 
+    .leaflet-control-layers {
+      display: none;
+    }
+  }
+
+  @media screen and (max-width:769px) and (min-width: 541px) {
     .leaflet-container {
       height: 350px;
       width: 350px;
-    }
-
-    .leaflet-control-layers {
-      display: none;
     }
   }
   
